force-app/main/default/objects/customer__c/customer__c.object-meta.xml
<CustomObject>
    <label>customer</label>
    <nameField>
        <label>customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>