force-app/main/default/objects/customer__c/fields/Intrest__c.field-meta.xml
<CustomField>
    <fullName>Intrest__c</fullName>
    <label>IntrestRate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>