force-app/main/default/objects/customer__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <label>Tax</label>
    <length>40</length>
    <type>Text</type>
</CustomField>