force-app/main/default/objects/customer__c/fields/TimePeriod__c.field-meta.xml
<CustomField>
    <fullName>TimePeriod__c</fullName>
    <label>TimePeriod</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>