force-app/main/default/objects/customer__c/fields/TIntrest__c.field-meta.xml
<CustomField>
    <fullName>TIntrest__c</fullName>
    <label>Intrest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>